# cpp-test-code

./: .gitignore  .gitingore  CMakeLists.txt  README.md  main.cpp
core/: JournalController.cpp  JournalController.h  JournalItem.cpp  JournalItem.h
ui/: App.cpp  App.h
